--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.5.3",
+    "ethers": "^5.6.2",
     "next": "12.1.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "siwe": "^1.1.6"
   },
   "devDependencies": {
     "eslint": "8.9.0",
