--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@emotion/styled": "^11.8.1",
     "@metamask/detect-provider": "^1.2.0",
     "@mui/material": "^5.5.3",
+    "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.6.2",
     "next": "12.1.0",
     "react": "17.0.2",
